# BillCreator

./: .gitignore  Cargo.toml
src/: create_bill_printpdf.rs  main.rs  parsing_arguments.rs
