[package]
name = "rechnungsgenerator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genpdf = "0.2.0"
email_address = "0.2.4"

[dependencies.clap]
version  = "4.3.4"
features = ["derive"]

[dependencies.chrono]
version  = "0.4.25"
features = ["alloc"]